feat: added a bunch of fixes